# advent_of_code_2022

./: pyproject.toml
Day 1/: main.py
Day 2/: main.py
Day 2/alternative_method/: main.py
Day 3/: main.py
Day 4/: main.py
Day 5/: main.py
Day 6/: main.py
Day 7/: main.py
template/: cookiecutter.json
template/Day {{cookiecutter.day}}/: main.py
