[tool.poetry]
name = "advent_of_code_2022"
version = "0.1.0"
description = ""
authors = ["jimmybunter01 <65281539+jimmybunter01@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
